[package]
name = "remotia-samples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1.14.0"
features = ["rt-multi-thread"]

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"

remotia = { git = "https://github.com/remotia/remotia", branch = "master" }
remotia-ffmpeg-codecs = { git = "https://github.com/remotia/remotia-ffmpeg-codecs", branch = "master" }
remotia-srt = { git = "https://github.com/remotia/remotia-srt", branch = "master" }
